syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Integers{
  int32 first_integer = 1;
  int32 second_integer = 2;
}

message CalculatorRequest{
  Integers integers = 1;
}

message CalculatorResponse{
  int32 result = 1;
}

service CalculatorService{
  //unary
  rpc calculate(CalculatorRequest) returns (CalculatorResponse){};
}